# desafioBeAnalytic

./: .gitignore  pyproject.toml
configuration/: configs.py  settings.toml
docs/: README.md
drivers/firefox/: firefox_drive.py
pages/steam/: steam_infos_sales_page.py
resources/: windows_handler.py
routines/steam/: get_all_sales_steam_data_routine.py
tasks/steam/: get_sales_data_from_table_task.py  list_all_sales_data_on_table_task.py
